objects/Usage_FSL__c.object
<CustomObject>
    <description>BEST TS Usage for Field Service Lightning</description>
    <fields>
        <fullName>Charge_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Charge Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Code__c</fullName>
        <formula>Service_Contract__r.Contract_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Pricing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Pricing</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contract_Pricing__c.Service_Contract__c</field>
                <operation>equals</operation>
                <valueField>$Source.Service_Contract__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract_Pricing__c</referenceTo>
        <relationshipLabel>Usages</relationshipLabel>
        <relationshipName>Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_per_Unit__c</fullName>
        <label>Cost per Unit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_PO_Number__c</fullName>
        <formula>Service_Contract__r.PO_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current PO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <formula>Service__r.CKSW_BASE__Resource__r.Employee_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Mark_Up__c</fullName>
        <defaultValue>0.10</defaultValue>
        <label>Expense Mark Up</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expense__c</fullName>
        <label>Expense</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Material</fullName>
                </value>
                <value>
                    <fullName>Postage</fullName>
                </value>
                <value>
                    <fullName>Fuel</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Parking</fullName>
                </value>
                <value>
                    <fullName>Taxi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expenses_Total__c</fullName>
        <formula>IF(RecordType.Name = &quot;Expenses&quot;, Units__c * Cost_per_Unit__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expenses Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>For_Current_PO__c</fullName>
        <formula>IF( PO_Number_Applied__c  =  Current_PO_Number__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>For Current PO?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Created__c</fullName>
        <formula>Work_Order__r.Invoice_Created__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <formula>Total_Revenue__c - Total_Cost_Usage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_per__c</fullName>
        <formula>Margin__c / Total_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Not_a_Sole_Trader__c</fullName>
        <label>Not a Sole Trader</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <defaultValue>&quot;Please attach a photo of the Receipt&quot;</defaultValue>
        <label>Note:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number_Applied__c</fullName>
        <label>PO Number Applied</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Category_Formula__c</fullName>
        <formula>Contract_Pricing__r.Pricing_Category__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Category_Report__c</fullName>
        <formula>IF(  RecordType.DeveloperName = &apos;Expenses&apos;, &quot;ER-PT - Expense Reimbursement pass through&quot;,   Pricing_Category_Formula__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Category</label>
        <referenceTo>Pricing_Category__c</referenceTo>
        <relationshipLabel>Usages</relationshipLabel>
        <relationshipName>Usages1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_per_Unit__c</fullName>
        <label>Revenue per Unit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Usages</relationshipLabel>
        <relationshipName>Usages</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>CKSW_BASE__Service__c</referenceTo>
        <relationshipLabel>Usages</relationshipLabel>
        <relationshipName>Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Slips_Week_Ending__c</fullName>
        <formula>Work_Order__r.Week_Ending__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Slips Week Ending</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Usage__c</fullName>
        <formula>Total_Engineering_Cost__c + Total_Pass_Through_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>Cost_per_Unit__c * Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Engineering_Cost__c</fullName>
        <label>Total Engineering Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Engineering_Revenue__c</fullName>
        <label>Total Engineering Revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Pass_Through_Cost__c</fullName>
        <label>Total Pass Through Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Pass_Through_Revenue__c</fullName>
        <label>Total Pass Through Revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Revenue__c</fullName>
        <formula>Total_Engineering_Revenue__c + Total_Pass_Through_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usage_Engineering_Margin__c</fullName>
        <formula>IF(Total_Engineering_Revenue__c=0,0,(Total_Engineering_Revenue__c - Total_Engineering_Cost__c)/ Total_Engineering_Revenue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Usage Engineering Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usage_Pass_Through_Margin__c</fullName>
        <formula>IF(Total_Pass_Through_Revenue__c=0,0,(Total_Pass_Through_Revenue__c-Total_Pass_Through_Cost__c)/Total_Pass_Through_Revenue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Usage Pass Through Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usage_line_Engineering_margin__c</fullName>
        <formula>Total_Engineering_Revenue__c - Total_Engineering_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Usage line Engineering margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Usage_line_Pass_Through_margin__c</fullName>
        <formula>Total_Pass_Through_Revenue__c-Total_Pass_Through_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Usage line Pass Through margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Usage_margin_Engineering_perc__c</fullName>
        <formula>Usage_Engineering_Margin__c /1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Usage margin Engineering perc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Usage_margin_Pass_Through_perc__c</fullName>
        <formula>Usage_Pass_Through_Margin__c /1</formula>
        <label>Usage margin Pass Through perc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Use_Standard_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Standard Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Usages</relationshipLabel>
        <relationshipName>Usages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Usage</label>
    <nameField>
        <displayFormat>US-{0000000}</displayFormat>
        <label>Usage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usages</pluralLabel>
    <recordTypes>
        <fullName>Expenses</fullName>
        <active>true</active>
        <label>Expenses</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Usage</fullName>
        <active>true</active>
        <label>Standard Usage</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Invoice_Created_Usage</fullName>
        <active>true</active>
        <description>Unable to update usage if Invoice has been created on Work Order</description>
        <errorConditionFormula>Invoiced__c  = true
&amp;&amp;NOT((PRIORVALUE( Invoiced__c))=false)</errorConditionFormula>
        <errorMessage>Unable to update usage as Work Order has been invoiced</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tech_cant_reassign_Usage_to_Service</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Service__c ) &amp;&amp; $User.ProfileId =&quot;00eN0000000I5Bu&quot;</errorConditionFormula>
        <errorDisplayField>Service__c</errorDisplayField>
        <errorMessage>Cannot reassign a Usage record to a different Service</errorMessage>
    </validationRules>
</CustomObject>